translation-tool/inputs/source_meta/objects/Tools_Master__c.object
<CustomObject>
    <description>Tools Master Objects.</description>
    <fields>
        <fullName>Prefetch_API_URL__c</fullName>
        <label>Prefetch API URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefetch_API__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prefetch API</description>
        <label>Prefetch API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefetch_Screen_URL__c</fullName>
        <description>Prefetch Screen URL</description>
        <label>Prefetch Screen URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefetch_Screen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prefetch Screen</description>
        <inlineHelpText>Prefetch Screen</inlineHelpText>
        <label>Prefetch Screen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Salesforce ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Salesforce ID</inlineHelpText>
        <label>Salesforce ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TOOL_MASTER_ID__c</fullName>
        <description>Tools Master ID</description>
        <externalId>true</externalId>
        <label>TOOL MASTER ID</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL</description>
        <inlineHelpText>URL</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tools Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TOOL_MASTER_ID__c</columns>
        <columns>Salesforce_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tools Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Hsvc_URL_mandatory_if_prefetch_selected</fullName>
        <active>false</active>
        <description>If Prefetch API is selected then Prefetch API URL should be filled, if Prefetch Screen is selected then Prefectch screen URL should be filled</description>
        <errorConditionFormula>OR( Prefetch_API__c == TRUE &amp;&amp;  ISBLANK(Prefetch_API_URL__c),  Prefetch_Screen__c == TRUE &amp;&amp; ISBLANK(Prefetch_Screen_URL__c))</errorConditionFormula>
        <errorMessage>Enter the corresponding Pre fetch  URL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hsvc_prefetch_mandatory_if_URL_filled</fullName>
        <active>false</active>
        <description>If user fills the URL then the respective Pre Fetch screen should be checked</description>
        <errorConditionFormula>OR( NOT(ISBLANK(Prefetch_API_URL__c)) &amp;&amp;  Prefetch_API__c = FALSE, NOT(ISBLANK( Prefetch_Screen_URL__c)) &amp;&amp;  Prefetch_Screen__c = FALSE)</errorConditionFormula>
        <errorMessage>Selecting Pre-Fetch check box is mandatory if respective URL is filled</errorMessage>
    </validationRules>
</CustomObject>